5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1859_3211.log
== SUBMITION (2019-06-26 14:18:34) 
-- CODE:
from numpy import*
from numpy.linalg import*
n=array(eval(input()))
nat=input()
v=array[]
[1,2,0.5,1.5],
[1.5,1,0.5,1],
[1,1,1,2.5],
[2.5,0.5,2,0.5]
n=v.T





-- EXECUTION TIME:
0.54942
-- ERROR:
  File "/home/codebench/codes/1859/3211/main.py", line 5
    v=array[]
            ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:22:10) 
-- CODE:
from numpy import*
from numpy.linalg import*
n=array(eval(input()))
nat=input()
v=array[]
[1,2,0.5,1.5],
[1.5,1,0.5,1],
[1,1,1,2.5],
[2.5,0.5,2,0.5]
n=v.T
print(round(0, n))




-- ERROR:
File "XXXX", line 5
    v=array[]
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:22:55) 
-- CODE:
from numpy import*
from numpy.linalg import*
n=array(eval(input()))
v=array([1,2,0.5,1.5],[1.5,1,0.5,1],[1,1,1,2.5],[2.5,0.5,2,0.5])
n=v.T
print(round(0, n))


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:23:04) 
-- CODE:
from numpy import*
from numpy.linalg import*
n=array(eval(input()))
v=array([1,2,0.5,1.5],[1.5,1,0.5,1],[1,1,1,2.5],[2.5,0.5,2,0.5])
n=v.T
print(round(0, n))


-- EXECUTION TIME:
1.02431
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/3211/main.py", line 4, in <module>
    v=array([1,2,0.5,1.5],[1.5,1,0.5,1],[1,1,1,2.5],[2.5,0.5,2,0.5])
ValueError: only 2 non-keyword arguments accepted

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:45:09) 
-- CODE:
from numpy import*
from numpy.linalg import*
n=array(eval(input()))
v=array([1,2,0.5,1.5],[1.5,1,0.5,1],[1,1,1,2.5],[2.5,0.5,2,0.5])
n=v.T
x=dot(n, v)
print(round(0, x))



-- EXECUTION TIME:
0.727958
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/3211/main.py", line 4, in <module>
    v=array([1,2,0.5,1.5],[1.5,1,0.5,1],[1,1,1,2.5],[2.5,0.5,2,0.5])
ValueError: only 2 non-keyword arguments accepted

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:47:33) 
-- CODE:
from numpy import*
from numpy.linalg import*
n=array(eval(input()))
v=array([1,2,0.5,1.5],[1.5,1,0.5,1],[1,1,1,2.5],[2.5,0.5,2,0.5])
v=n.T
x=dot(n, v)
print(round(0, x))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:47:35) 
-- CODE:
from numpy import*
from numpy.linalg import*
n=array(eval(input()))
v=array([1,2,0.5,1.5],[1.5,1,0.5,1],[1,1,1,2.5],[2.5,0.5,2,0.5])
v=n.T
x=dot(n, v)
print(round(0, x))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 14:47:51) 
-- CODE:
from numpy import*
from numpy.linalg import*
n=array(eval(input()))
v=array([1,2,0.5,1.5],[1.5,1,0.5,1],[1,1,1,2.5],[2.5,0.5,2,0.5])
y=n.T
x=dot(n, v)
print(round(0, x))



-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 14:48:06) 
-- CODE:
from numpy import*
from numpy.linalg import*
n=array(eval(input()))
v=array([1,2,0.5,1.5],[1.5,1,0.5,1],[1,1,1,2.5],[2.5,0.5,2,0.5])
y=n.T
x=dot(n, v)
print(round(0, x))



-- EXECUTION TIME:
1.15344
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1859/3211/main.py", line 4, in <module>
    v=array([1,2,0.5,1.5],[1.5,1,0.5,1],[1,1,1,2.5],[2.5,0.5,2,0.5])
ValueError: only 2 non-keyword arguments accepted

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
